hello world html
Removed game instructions and added a simple 'hello world' paragraph.

--- a/index.html
+++ b/index.html
@@ -1,383 +1,8 @@
-<!-- Hello World Hunt - Single File Game
-     Save this file as hello-world-hunt.html and open in your browser.
-     A simple, fun game where letters of "HELLO, WORLD!" are scattered and
-     the player must collect them in order by clicking or typing.
--->
-
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Hello World Hunt</title>
-  <style>
-    :root{
-      --bg:#0f1724;
-      --card:#0b1220;
-      --accent:#ffcc33;
-      --muted:#9aa6b2;
-      --glass: rgba(255,255,255,0.04);
-    }
-    *{box-sizing:border-box}
-    html,body{height:100%;margin:0;font-family:Inter,ui-sans-serif,system-ui,Segoe UI,Roboto,Helvetica,Arial,"Apple Color Emoji","Segoe UI Emoji";background:linear-gradient(180deg,#071225 0%, #081428 50%, #071428 100%);color:#e6eef6}
-
-    .wrap{min-height:100vh;display:flex;align-items:center;justify-content:center;padding:24px}
-    .game{
-      width:980px;max-width:100%;background:linear-gradient(180deg, rgba(255,255,255,0.03), rgba(255,255,255,0.02));border-radius:14px;padding:18px;box-shadow:0 8px 30px rgba(2,6,23,0.6);display:grid;grid-template-columns:1fr 360px;gap:18px}
-
-    header{display:flex;align-items:center;gap:12px}
-    .logo{width:56px;height:56px;border-radius:10px;background:linear-gradient(135deg,var(--accent),#ff7a7a);display:flex;align-items:center;justify-content:center;font-weight:800;color:#071428;font-size:20px}
-    h1{font-size:20px;margin:0}
-    p.lead{margin:0;color:var(--muted);font-size:13px}
-
-    .stage{position:relative;background:linear-gradient(180deg, rgba(255,255,255,0.015), rgba(255,255,255,0.01));border-radius:10px;padding:12px;min-height:520px;overflow:hidden}
-    .hud{display:flex;gap:8px;align-items:center;flex-wrap:wrap;margin-bottom:8px}
-    .chip{background:var(--glass);padding:8px 10px;border-radius:999px;font-size:13px;color:var(--muted);display:inline-flex;align-items:center;gap:6px}
-    .progress{height:12px;background:rgba(255,255,255,0.03);border-radius:999px;overflow:hidden;width:100%}
-    .progress > i{display:block;height:100%;background:linear-gradient(90deg,var(--accent),#ff7a7a);width:0%}
-
-    .board{position:relative;height:440px;border-radius:8px;border:1px dashed rgba(255,255,255,0.03);display:flex;align-items:center;justify-content:center}
-    .letter{position:absolute;min-width:52px;min-height:52px;padding:8px 12px;border-radius:10px;background:linear-gradient(180deg,rgba(255,255,255,0.04),rgba(255,255,255,0.02));display:flex;align-items:center;justify-content:center;font-weight:800;font-size:20px;cursor:pointer;user-select:none;transition:transform .15s ease,opacity .25s ease,box-shadow .15s}
-    .letter:hover{transform:scale(1.06);box-shadow:0 6px 18px rgba(0,0,0,0.5)}
-    .letter.collected{opacity:0.18;transform:scale(.9) rotate(-10deg)}
-
-    .sidebar{padding:10px;background:linear-gradient(180deg, rgba(255,255,255,0.01), rgba(255,255,255,0.005));border-radius:10px;display:flex;flex-direction:column;gap:12px}
-    .panel{background:rgba(255,255,255,0.02);padding:12px;border-radius:8px}
-    .big{font-size:28px;font-weight:800}
-
-    footer{font-size:13px;color:var(--muted);display:flex;gap:8px;align-items:center}
-    .controls{display:flex;gap:6px;flex-wrap:wrap}
-    button.btn{background:linear-gradient(90deg,var(--accent),#ff7a7a);border:none;padding:8px 12px;border-radius:8px;font-weight:700;color:#071428;cursor:pointer}
-    button.ghost{background:transparent;border:1px solid rgba(255,255,255,0.04);color:var(--muted)}
-
-    .target{display:flex;gap:8px;align-items:center;font-size:20px}
-    .target .slot{min-width:34px;height:34px;border-radius:6px;background:rgba(255,255,255,0.02);display:flex;align-items:center;justify-content:center;font-weight:800}
-
-    /* confetti canvas full cover */
-    canvas.confetti{position:absolute;left:0;top:0;pointer-events:none}
-
-    /* small responsive tweaks */
-    @media (max-width:880px){.game{grid-template-columns:1fr;}.sidebar{order:2}}
-  </style>
-</head>
-<body>
-  <div class="wrap">
-    <div class="game" role="application" aria-label="Hello World Hunt game">
-      <div>
-        <header>
-          <div class="logo">HW</div>
-          <div>
-            <h1>Hello World Hunt</h1>
-            <p class="lead">Collect the letters to spell <strong>"HELLO, WORLD!"</strong> in order — click or type them. Levels get trickier!</p>
-          </div>
-        </header>
-
-        <section class="stage" id="stage">
-          <div class="hud" aria-hidden="false">
-            <div class="chip">Level: <strong id="level">1</strong></div>
-            <div class="chip">Time: <strong id="time">60</strong>s</div>
-            <div class="chip">Score: <strong id="score">0</strong></div>
-            <div style="flex:1"></div>
-            <div class="chip">Hints left: <strong id="hints">3</strong></div>
-          </div>
-
-          <div class="progress" aria-hidden="true">
-            <i id="bar"></i>
-          </div>
-
-          <div class="board" id="board" tabindex="0" aria-label="playing board where letters appear">
-            <!-- Letters injected here -->
-            <canvas class="confetti" id="confetti"></canvas>
-          </div>
-
-        </section>
-
-        <footer style="margin-top:10px;display:flex;justify-content:space-between;align-items:center;">
-          <div class="controls">
-            <button class="btn" id="startBtn">Start / Restart</button>
-            <button class="ghost" id="hintBtn">Hint</button>
-            <button class="ghost" id="muteBtn">Mute</button>
-          </div>
-          <div style="color:var(--muted);">Tip: you can also type letters on your keyboard.</div>
-        </footer>
-      </div>
-
-      <aside class="sidebar">
-        <div class="panel">
-          <div style="display:flex;justify-content:space-between;align-items:center">
-            <div>
-              <div class="muted">Target</div>
-              <div class="target" id="target"></div>
-            </div>
-            <div style="text-align:right">
-              <div style="color:var(--muted);font-size:13px">Next</div>
-              <div class="big" id="nextLetter">H</div>
-            </div>
-          </div>
-        </div>
-
-        <div class="panel">
-          <div style="color:var(--muted);font-size:13px">How to play</div>
-          <ol style="padding-left:18px;margin:8px 0;color:var(--muted);font-size:13px">
-            <li>Click the letter tiles in the board in order.</li>
-            <li>Or press the corresponding key on your keyboard.</li>
-            <li>Collect letters in sequence to score points and finish the level.</li>
-          </ol>
-        </div>
-
-        <div class="panel" style="text-align:center">
-          <div style="font-size:14px;color:var(--muted)">Made for fun — Hello World exploration!</div>
-        </div>
-      </aside>
-
-    </div>
-  </div>
-
-  <script>
-    // Game configuration
-    const TARGET = 'HELLO, WORLD!'; // includes comma and exclamation
-    const MAX_LEVEL = 8;
-
-    // state
-    let state = {
-      level:1, time:60, score:0, nextIndex:0, running:false, hints:3, mute:false
-    };
-
-    // DOM refs
-    const board = document.getElementById('board');
-    const targetEl = document.getElementById('target');
-    const nextLetter = document.getElementById('nextLetter');
-    const levelEl = document.getElementById('level');
-    const timeEl = document.getElementById('time');
-    const scoreEl = document.getElementById('score');
-    const bar = document.getElementById('bar');
-    const startBtn = document.getElementById('startBtn');
-    const hintBtn = document.getElementById('hintBtn');
-    const muteBtn = document.getElementById('muteBtn');
-    const hintsEl = document.getElementById('hints');
-    const confettiCanvas = document.getElementById('confetti');
-
-    // audio simple using WebAudio for click & success
-    let audioCtx;
-    function beep(f=440,d=0.08){
-      if(state.mute) return;
-      if(!audioCtx) audioCtx = new (window.AudioContext||window.webkitAudioContext)();
-      const o = audioCtx.createOscillator();
-      const g = audioCtx.createGain();
-      o.connect(g); g.connect(audioCtx.destination);
-      o.frequency.value = f; g.gain.value = 0.05;
-      o.type='sine'; o.start();
-      g.gain.exponentialRampToValueAtTime(0.0001, audioCtx.currentTime + d);
-      setTimeout(()=>o.stop(), d*1000+50);
-    }
-
-    // simple confetti implementation
-    const confetti = {
-      particles: [],
-      ctx: confettiCanvas.getContext('2d'),
-      resize(){confettiCanvas.width = board.clientWidth; confettiCanvas.height = board.clientHeight},
-      spawn(x,y,count=30){
-        for(let i=0;i<count;i++){
-          confetti.particles.push({x,y,vx:(Math.random()-0.5)*6,vy:(Math.random()-0.8)*-6,size:2+Math.random()*6,color:`hsl(${Math.random()*360} 90% 60%)`,life:60 + Math.random()*80})
-        }
-      },
-      frame(){
-        const ctx = confetti.ctx; ctx.clearRect(0,0,confettiCanvas.width,confettiCanvas.height);
-        for(let i=confetti.particles.length-1;i>=0;i--){
-          const p = confetti.particles[i];
-          p.vy += 0.2; p.x += p.vx; p.y += p.vy; p.life--;
-          ctx.save(); ctx.globalAlpha = Math.max(0, p.life/100);
-          ctx.fillStyle = p.color; ctx.fillRect(p.x, p.y, p.size, p.size);
-          ctx.restore();
-          if(p.life<=0) confetti.particles.splice(i,1);
-        }
-        requestAnimationFrame(confetti.frame);
-      }
-    };
-
-    function setTargetSlots(){
-      targetEl.innerHTML = '';
-      for(let i=0;i<TARGET.length;i++){
-        const s = document.createElement('div'); s.className='slot'; s.setAttribute('data-i',i);
-        const ch = TARGET[i] === ' ' ? '␣' : (TARGET[i]);
-        s.textContent = (i < state.nextIndex) ? TARGET[i] : '';
-        targetEl.appendChild(s);
-      }
-    }
-
-    function spawnLetters(){
-      board.querySelectorAll('.letter').forEach(n=>n.remove());
-      const lettersPool = generatePool();
-      const w = board.clientWidth, h = board.clientHeight;
-      lettersPool.forEach((ch,idx)=>{
-        const el = document.createElement('button');
-        el.className='letter'; el.setAttribute('data-ch', ch); el.setAttribute('aria-label','Letter '+ch);
-        el.innerHTML = ch === ' ' ? '␣' : ch;
-        // random position but avoid center overlap
-        const pad = 30; const x = Math.random()*(w-120)+60; const y = Math.random()*(h-120)+60;
-        el.style.left = x+'px'; el.style.top = y+'px';
-        el.style.fontSize = (18 + Math.random()*10)+'px';
-        el.addEventListener('click', onLetterClick);
-        board.appendChild(el);
-      });
-    }
-
-    function generatePool(){
-      // Include all letters of target plus some distractors depending on level
-      const pool = [];
-      // include each target char once
-      for(const c of TARGET) pool.push(c);
-      // add duplicates & random extras
-      const extras = Math.min(4 + state.level*2, 18);
-      const alphabet = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ, !'.split('');
-      for(let i=0;i<extras;i++){
-        pool.push(alphabet[Math.floor(Math.random()*alphabet.length)]);
-      }
-      // shuffle
-      for(let i=pool.length-1;i>0;i--){const j=Math.floor(Math.random()*(i+1));[pool[i],pool[j]]=[pool[j],pool[i]]}
-      return pool;
-    }
-
-    function onLetterClick(e){
-      const el = e.currentTarget; const ch = el.getAttribute('data-ch');
-      tryConsume(ch, el);
-    }
-
-    function tryConsume(ch, el){
-      const expected = TARGET[state.nextIndex];
-      // normalize space
-      const norm = ch === '␣' ? ' ' : ch;
-      if(norm === expected){
-        // correct
-        state.nextIndex++; state.score += 10 * state.level; scoreEl.textContent = state.score; levelEl.textContent = state.level;
-        el.classList.add('collected'); el.disabled=true; beep(880,0.06);
-        setTargetSlots(); updateNext(); updateProgress();
-        confetti.spawn(parseFloat(el.style.left)+16, parseFloat(el.style.top)+16, 18);
-        if(state.nextIndex >= TARGET.length){
-          levelComplete();
-        }
-      } else {
-        // wrong
-        state.score = Math.max(0, state.score - 3); scoreEl.textContent = state.score; beep(180,0.12);
-        // shake
-        el.animate([{transform:'translateX(0)'},{transform:'translateX(-8px)'},{transform:'translateX(8px)'},{transform:'translateX(0)'}],{duration:260})
-      }
-    }
-
-    function updateNext(){
-      const next = TARGET[state.nextIndex] || '';
-      nextLetter.textContent = next === ' ' ? 'space' : (next || '-');
-    }
-
-    function updateProgress(){
-      const pct = (state.nextIndex / TARGET.length) * 100;
-      bar.style.width = pct + '%';
-    }
-
-    let timerInterval;
-    function startTimer(){
-      clearInterval(timerInterval);
-      timerInterval = setInterval(()=>{
-        if(!state.running) return;
-        state.time--; timeEl.textContent = state.time;
-        if(state.time<=0){
-          endGame(false);
-        }
-      },1000);
-    }
-
-    function startLevel(){
-      state.running = true; state.nextIndex = 0; levelEl.textContent = state.level; hintsEl.textContent = state.hints;
-      // time decreases with level
-      state.time = Math.max(20, 60 - (state.level-1)*6);
-      timeEl.textContent = state.time; scoreEl.textContent = state.score;
-      setTargetSlots(); spawnLetters(); updateNext(); updateProgress();
-      confetti.resize();
-      startTimer();
-    }
-
-    function levelComplete(){
-      state.running=false; state.score += 50 * state.level; scoreEl.textContent = state.score; beep(1200,0.15);
-      confetti.spawn(board.clientWidth/2, board.clientHeight/2, 120);
-      // small celebration animation
-      board.animate([{transform:'scale(1)'},{transform:'scale(1.02)'},{transform:'scale(1)'}],{duration:800});
-      setTimeout(()=>{
-        if(state.level < MAX_LEVEL){ state.level++; startLevel(); } else { endGame(true); }
-      },900);
-    }
-
-    function endGame(won){
-      state.running=false; clearInterval(timerInterval);
-      if(won){
-        alert(`🎉 You finished all levels! Score: ${state.score}`);
-      } else {
-        alert(`Time's up! Your score: ${state.score}. Try again.`);
-      }
-    }
-
-    // hints: highlight the next letter
-    function giveHint(){
-      if(state.hints<=0) return; state.hints--; hintsEl.textContent = state.hints; beep(640,0.08);
-      const need = TARGET[state.nextIndex];
-      const items = Array.from(board.querySelectorAll('.letter')).filter(x=>x.getAttribute('data-ch')===need);
-      if(items.length){
-        const el = items[0];
-        el.animate([{transform:'scale(1)'},{transform:'scale(1.14)'},{transform:'scale(1)'}],{duration:700});
-      }
-    }
-
-    // keyboard support
-    document.addEventListener('keydown', (e)=>{
-      if(!state.running) return;
-      const key = e.key.toUpperCase();
-      if(key === 'BACKSPACE') return;
-      if(key === ' ') tryConsume(' ', null);
-      else tryConsume(key, findLetterButton(key));
-    });
-
-    function findLetterButton(ch){
-      const list = Array.from(board.querySelectorAll('.letter'));
-      return list.find(x=>{const d=x.getAttribute('data-ch'); return (d===ch)});
-    }
-
-    // start/restart
-    startBtn.addEventListener('click', ()=>{
-      state.level=1; state.score=0; state.hints=3; startLevel();
-    });
-
-    hintBtn.addEventListener('click', ()=>{ giveHint(); });
-    muteBtn.addEventListener('click', ()=>{ state.mute = !state.mute; muteBtn.textContent = state.mute? 'Unmute' : 'Mute'; });
-
-    // resize confetti canvas when board resizes
-    new ResizeObserver(()=>{confetti.resize()}).observe(board);
-
-    // start confetti loop
-    confetti.frame();
-
-    // layout on load
-    window.addEventListener('load', ()=>{
-      setTargetSlots(); updateNext(); updateProgress();
-      // pre-spawn letters but not running
-      spawnLetters();
-    });
-
-    // safety: avoid tryConsume when element is null
-    function tryConsume(ch, el){
-      const expected = TARGET[state.nextIndex];
-      const norm = ch === '␣' ? ' ' : ch;
-      if(norm === expected){
-        state.nextIndex++; state.score += 10 * state.level; scoreEl.textContent = state.score; levelEl.textContent = state.level;
-        if(el){ el.classList.add('collected'); el.disabled=true; }
-        beep(880,0.06);
-        setTargetSlots(); updateNext(); updateProgress();
-        if(el) confetti.spawn(parseFloat(el.style.left||board.clientWidth/2), parseFloat(el.style.top||board.clientHeight/2), 18);
-        if(state.nextIndex >= TARGET.length){ levelComplete(); }
-      } else {
-        state.score = Math.max(0, state.score - 3); scoreEl.textContent = state.score; beep(180,0.12);
-        if(el) el.animate([{transform:'translateX(0)'},{transform:'translateX(-8px)'},{transform:'translateX(8px)'},{transform:'translateX(0)'}],{duration:260});
-      }
-    }
-
-  </script>
-</body>
+<html>
+     <head>
+          
+     </head>
+     <body>
+          <p>hello world </p>
+     </body>
 </html>
