Modify quotes and comment out an image in index.html
Updated quotes in the JavaScript array and commented out an image.

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 <body>
 
   <div class="card">
-    <img src="https://i.imgur.com/8Km9tLL.jpg" alt="Abhishek">
+    <!-- <img src="https://i.imgur.com/8Km9tLL.jpg" alt="Abhishek"> -->
     <h1>Abhishek Chaudhary 😎</h1>
     <h3>The One & Only Legend</h3>
 
@@ -119,16 +119,19 @@
 
   <script>
     const quotes = [
-      "Abhishek doesn’t need Google — Google needs Abhishek!",
-      "Some say perfection doesn’t exist… until they met Abhishek 😏",
-      "99% charm, 1% WiFi connection — that's Abhishek math!",
-      "Warning: Being friends with Abhishek causes endless laughter!",
-      "Abhishek’s brain runs faster than your internet!",
-      "Cooler than your playlist, sharper than your selfie angle.",
-      "Abhishek doesn’t make mistakes — he creates new versions!",
-      "Legend says Abhishek once debugged a bug just by looking at it 😎",
-      "Brains, looks, and humor — triple combo = Abhishek!",
-      "Keep calm and let Abhishek handle it 💪"
+      "Some say perfection doesn’t exist… until they met my Guru Abhishek 
+      - Bibash Karki ",
+      "Warning: Being friends with Abhishek causes endless laughter! 
+      - Parbesh Gupta",
+      "Cooler than your playlist, sharper than your selfie angle. 
+      -Random Person",
+      "Abhishek doesn’t make mistakes — he creates new versions! 
+      - Partyush Kastha",
+      "Brains, looks, and humor — triple combo = Abhishek! 
+      - Manish Bisunkhe",
+      "I am honestly thank Abhishek Sir for being my guide in this world. Thank you my Guru. 
+      - Bibash Karki 
+      - Manish Bisunkhe "
     ];
 
     function showQuote() {
