--- a/index.html
+++ b/index.html
@@ -119,8 +119,7 @@
 
   <script>
     const quotes = [
-      "Some say perfection doesn’t exist… until they met my Guru Abhishek 
-      - Bibash Karki ",
+      "Some say perfection doesn’t exist… until they met my Guru Abhishek.     - Bibash Karki ",
       "Warning: Being friends with Abhishek causes endless laughter! 
       - Parbesh Gupta",
       "Cooler than your playlist, sharper than your selfie angle. 
