--- a/index.html
+++ b/index.html
@@ -120,17 +120,11 @@
   <script>
     const quotes = [
       "Some say perfection doesn’t exist… until they met my Guru Abhishek.     - Bibash Karki ",
-      "Warning: Being friends with Abhishek causes endless laughter! 
-      - Parbesh Gupta",
-      "Cooler than your playlist, sharper than your selfie angle. 
-      -Random Person",
-      "Abhishek doesn’t make mistakes — he creates new versions! 
-      - Partyush Kastha",
-      "Brains, looks, and humor — triple combo = Abhishek! 
-      - Manish Bisunkhe",
-      "I am honestly thank Abhishek Sir for being my guide in this world. Thank you my Guru. 
-      - Bibash Karki 
-      - Manish Bisunkhe "
+      "Warning: Being friends with Abhishek causes endless laughter!      - Parbesh Gupta",
+      "Cooler than your playlist, sharper than your selfie angle.      -Random Person",
+      "Abhishek doesn’t make mistakes — he creates new versions!      - Partyush Kastha",
+      "Brains, looks, and humor — triple combo = Abhishek!       - Manish Bisunkhe",
+      "I am honestly thank Abhishek Sir for being my guide in this world. Thank you my Guru.      - Bibash Karki  - Manish Bisunkhe "
     ];
 
     function showQuote() {
