Update footer text and quotes in index.html

--- a/index.html
+++ b/index.html
@@ -115,16 +115,16 @@
     <button onclick="showQuote()">Reveal Truth</button>
   </div>
 
-  <footer>Made with ❤️ by Abhishek just to tease my friends!</footer>
+  <footer>Made with ❤️ by Abhishek sir.</footer>
 
   <script>
     const quotes = [
-      "Some say perfection doesn’t exist… until they met my Guru Abhishek.     - Bibash Karki ",
-      "Warning: Being friends with Abhishek causes endless laughter!      - Parbesh Gupta",
-      "Cooler than your playlist, sharper than your selfie angle.      -Random Person",
-      "Abhishek doesn’t make mistakes — he creates new versions!      - Partyush Kastha",
-      "Brains, looks, and humor — triple combo = Abhishek!       - Manish Bisunkhe",
-      "I am honestly thank Abhishek Sir for being my guide in this world. Thank you my Guru.      - Bibash Karki  - Manish Bisunkhe "
+      "Some say perfection doesn’t exist… until they met my Guru Abhishek.       - Bibash Karki ",
+      "Warning: Being friends with Abhishek causes endless laughter!        - Parbesh Gupta",
+      "Cooler than your playlist, sharper than your selfie angle.        -Random Person",
+      "Abhishek doesn’t make mistakes — he creates new versions!       - Partyush Kastha",
+      "Brains, looks, and humor — triple combo = Abhishek!             - Manish Bisunkhe",
+      "I am honestly thank Abhishek Sir for being my guide in this world. Thank you my Guru.       - Bibash Karki   "
     ];
 
     function showQuote() {
