Update quotes in index.html with new phrasing

--- a/index.html
+++ b/index.html
@@ -119,12 +119,12 @@
 
   <script>
     const quotes = [
-      "Some say perfection doesn’t exist… until they met my Guru Abhishek.       - Bibash Karki ",
-      "Warning: Being friends with Abhishek causes endless laughter!        - Parbesh Gupta",
-      "Cooler than your playlist, sharper than your selfie angle.        -Random Person",
-      "Abhishek doesn’t make mistakes — he creates new versions!       - Partyush Kastha",
-      "Brains, looks, and humor — triple combo = Abhishek!             - Manish Bisunkhe",
-      "I am honestly thank Abhishek Sir for being my guide in this world. Thank you my Guru.       - Bibash Karki   "
+      "Some say perfection doesn’t exist… until they met my Guru Abhishek.      saying from  - Bibash Karki ",
+      "Warning: Being friends with Abhishek causes endless laughter!    saying from    - Parbesh Gupta",
+      "Cooler than your playlist, sharper than your selfie angle.     saying from   -Random Person",
+      "Abhishek doesn’t make mistakes — he creates new versions!     saying from  - Partyush Kastha",
+      "Brains, looks, and humor — triple combo = Abhishek!          saying from   - Manish Bisunkhe",
+      "I am honestly thank Abhishek Sir for being my guide in this world. Thank you my Guru.     saying from  - Bibash Karki   "
     ];
 
     function showQuote() {
